adding headings to the body

--- a/html_boilerplate/index.html
+++ b/html_boilerplate/index.html
@@ -6,6 +6,6 @@
     </head>
 
     <body>
-        This is the body of the html document.
+        <h1> This is the body of the html document. </h1>
     </body>
 </html>
