using the vscode boilerplate shortcut

--- a/html_boilerplate/index.html
+++ b/html_boilerplate/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title> Are ya winning son? </title>
-    </head>
-
-    <body>
-        <h1> This is the body of the html document. </h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>
+        Zuzia jest najlepszą dziewczyną na świecie ;D
+    </h1>
+</body>
 </html>
